<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014-2017 The OmniROM Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="device_title">Realme Settings</string>
    <string name="device_summary">Adjust Realme specific device settings</string>

    <!-- Display modes -->
    <string name="display_title">Display modes</string>
    <string name="display_color_calibration">Display Color Calibration</string>
    <string name="set_color_using_kcal">Calibrate Your Display Color Using KCAL</string>
    <string name="cat_colormanagement">Color Settings</string>
    <string name="cat_calibration">Display Calibration</string>
    <string name="kcal_enabled">On</string>
    <string name="kcal_disabled">Off</string>
    <string name="set_on_boot">Set On Boot</string>
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_minimum">Minimum</string>
    <string name="saturation">Saturation</string>
    <string name="value">Value</string>
    <string name="contrast">Contrast</string>
    <string name="hue">Hue</string>
    <string name="grayscale">Grayscale Display</string>

    <string name="presets_dialog_title">Select Preset</string>
    <!-- Presets -->
    <string name="preset_default">Default</string>
    <string name="preset_version_1">Version 1</string>
    <string name="preset_version_2">Version 2</string>
    <string name="preset_version_3">Version 3</string>
    <string name="preset_triluminous">Triluminous</string>
    <string name="preset_deep_black_white">Deep Black and White</string>
    <string name="preset_deep_natural">Deep Natural</string>
    <string name="preset_cool_amoled">Cool Amoled</string>
    <string name="preset_extreme_amoled">Extreme Amoled</string>
    <string name="preset_warm_amoled">Warm Amoled</string>
    <string name="preset_hybrid_mamba">Hybrid Mamba</string>
    <string name="preset_sir_banger">Sir Banger</string>
    <string name="preset_gerard_extrem_cool">Gerard Extreme Cool</string>
    <string name="preset_yoyoz808">Yoyoz808</string>
    <string name="preset_purian">Purian</string>
    <string name="preset_deep_black_colorful">Deep Black Colorful</string>
    <string name="preset_vomer_deep_rich">Vomer Deep Rich</string>
    <string name="preset_franco">Franco</string>
    <string name="preset_wrinklefree_cool">WrinkleFree Cool</string>
    <string name="preset_harley_tech">Harley-Tech</string>
    <string name="preset_perfection">Perfection</string>
    <string name="preset_banged_up">Banged up</string>
    <string name="preset_sim_cooler">SimCooler</string>
    <string name="preset_obsanity">Obsanity</string>
    <string name="preset_obsanity_ips">Obsanity IPS</string>

    <!-- Menu -->
    <string name="kcal_presets" translatable="false">@string/presets_dialog_title</string>
    <string name="kcal_reset">Reset</string>

    <!-- Custom seekbar -->
    <string name="custom_seekbar_value">Value: <xliff:g id="v">%s</xliff:g></string>
    <string name="custom_seekbar_default_value">Default</string>
    <string name="custom_seekbar_default_value_to_set">Default value: <xliff:g id="v">%s</xliff:g>\nLong press to set</string>
    <string name="custom_seekbar_default_value_is_set">Default value is set</string>

    <!-- Vibration control -->
    <string name="category_vibrator">Vibrator</string>
    <string name="vib_strength_title_head">System Strength</string>
    <string name="vib_strength_summary_head">Define the strength of the vibrator</string>

    <string name="app_confirm">OK</string>
    <string name="performance">Performance</string>
    <!-- Spectrum Profiles -->
    <string name="spectrum_profile_title">Kernel Profiles</string>
    <string name="spectrum_title">Kernel Profile</string>
    <string name="spectrum_summary">Choose your kernel profile</string>
    <string name="spectrum_dialogTitle">Choose your kernel profile</string>
    
    <!-- Spectrum QS tile -->
    <string name="specturm_qs_prompt_title">A QS title is available now.</string>
    <string name="specturm_qs_prompt_text">You can switch the kernel profile more quickly and easily by adding the spectrum tile to QS settings.</string>

    <string name="category_sound">Sound</string>
    <string name="headphone_gain">Headphone Gain</string>
    <string name="microphone_gain">Microphone Gain</string>

</resources>
